--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,10 +15,15 @@
 }
 .faruma {
     font-family: Faruma, Arial, Helvetica, sans-serif;
+    direction: rtl;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+input[type="number"] {
+    width: 3rem;
 }
 
 .form {
